--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "real-time-chat",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\" ",
+    "start": "node main.js",
+    "dev": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "socket.io": "^3.0.2"
+  },
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "nodemon": "^2.0.6"
   }
 }
