--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "emoji-mart": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-flash-message": "^1.0.5",
